# phoenix_1

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
app/: app.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
cow/: ai.py  gnocchi_client.py  i18n.py  messaging.py  notification.py  service.py  utils.py  version.py
cow/ai/: __init__.py  main.py  service.py
cow/ai/data/: data.csv
cow/ai/scripts/: data.py  evaluate.py  fit.py
cow/app/: api.py  app.py
cow/cmd/: agent_notification.py  ai.py
cow/conf/: __init__.py  ai.py  api.py  gnocchi_client.py  notification.py  schedule.py
cow/etc/: cow.conf.sample
devstack/: conf.sample  plugin.sh  settings
devstack/lib/: cow  phoenix
models/: model.pkl
phoenix/: i18n.py  notification.py  service.py  version.py
phoenix/ai/: service.py
phoenix/ai/data/: resource_prometheus.json
phoenix/ai/data/metrics/: node_cpu_seconds_total.csv  node_hwmon_temp_celsius.csv  scaph_host_disk_available_bytes.csv  scaph_host_disk_total_bytes.csv  scaph_host_load_avg_five.csv  scaph_host_memory_free_bytes.csv  scaph_host_memory_total_bytes.csv  scaph_host_power_microwatts.csv
phoenix/ai/data/test/: X.csv  y.csv
phoenix/ai/scripts/: data.py  evaluate.py  fit.py
phoenix/app/: api.py
phoenix/cmd/: ai.py  api.py
phoenix/conf/: __init__.py
phoenix/etc/: phoenix.conf.sample
python_cow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  requires.txt
tests/: test_ai.py
