[tool.poetry]
name = "cow"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pendulum = "^3.0.0"
colorama = "^0.4.6"
flask = "^3.0.3"

[tool.poetry.scripts]
main_ai = "cow.ai:run_ai"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
