[metadata]
name = python-cow
summary = Cow service
description_file =
    README.rst
author = Hyperus
author_email = dmitry.zaitsev@hyperus.team
home_page = https://docs.openstack.org/cow/latest/
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[files]
packages =
    cow
data_files =
    etc/ = etc/*

[entry_points]
oslo.config.opts =
    cow = cow.conf.opts:list_opts

console_scripts =
    cow-ai = cow.ai.main:run_ai
    cow-api = cow.app.api:run
    cow-agent-notification = cow.cmd.agent_notification:main
