[metadata]
name = python-phoenix
summary = phoenix service
description_file =
    README.rst
author = Hyperus
author_email = dmitry.zaitsev@hyperus.team
home_page = https://docs.openstack.org/phoenix/latest/
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[files]
packages =
    phoenix
data_files =
    etc/ = etc/*

[entry_points]
oslo.config.opts =
    phoenix = phoenix.conf.opts:list_opts

console_scripts =
    phoenix-ai = phoenix.cmd.ai:main
    phoenix-api = phoenix.cmd.api:main
